# FCS

./: Cargo.toml  README.md  Wiring.txt  build_and_flash.sh  setup.sh
pcb/: FCS_PCB.kicad_pcb  FCS_PCB.kicad_prl  FCS_PCB.kicad_pro  FCS_PCB.kicad_sch
src/: main.rs  mosfets.rs  radio.rs  sd_card.rs  sensors.rs
