[package]
name = "fcs-software"
version = "0.1.0"
authors = ["HannesScript <mail@hannesscript.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0", features = [ "esp32s3", "unstable" ] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
log = { version = "0.4.22" }
bmp280-ehal = "0.0.6" # for BMP280
mpu6050 = "0.1" # for MPU6050
embedded-sdmmc = "0.9" # for the SD-Card stuff
nmea0183 = "0.6" # to use the GPS
heapless = "0.9.2" # for all kinds of types (e. g. strings, vecs etc.)
#nalgebra = "0.34.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
